# subgraph-cosmos-proposals

./: .gitignore  .substreams.env  Cargo.toml  INJECTIVE_README.md  Makefile  README.md  schema.graphql  schema.sql  substreams.yaml
block-index/: Cargo.toml  Makefile  README.md  cosmos-block-index-v0.1.0.spkg  cosmos-proposals-block-index-v0.1.0.spkg  substreams.yaml
block-index/scripts/: events.js
block-index/src/: index.rs  lib.rs  map.rs
cosmos-block-index/: Cargo.toml  Makefile  README.md  cosmos-block-index-v0.1.0.spkg  cosmos-block-index-v0.2.0.spkg  substreams.yaml
cosmos-block-index/src/: index.rs  lib.rs  map.rs  protobufs.rs
cosmos-governance-parameters/: Cargo.toml  Makefile  README.md  cosmos-governance-parameters-v0.1.0.spkg  cosmos-governance-parameters-v0.2.0.spkg  substreams.yaml
cosmos-governance-parameters/src/: gov_params.rs  lib.rs  pending_gov_params.rs
cosmos-proposals/: Cargo.toml  Makefile  README.md  substreams.yaml
cosmos-proposals-events/: Cargo.toml  Makefile  README.md  cosmos-proposals-events-v0.1.0.spkg  cosmos-proposals-events-v0.2.0.spkg  cosmos-proposals-events-v0.2.1.spkg  substreams.yaml
cosmos-proposals-events/src/: lib.rs  map_events.rs
cosmos-proposals-protobuf/: Cargo.toml  Makefile  README.md  substreams.yaml
cosmos-proposals-protobuf/src/: lib.rs
cosmos-proposals-protobuf/src/pb/: cosmos.proposals.v1.rs  mod.rs
cosmos-proposals-sinks/: Cargo.toml  README.md  cosmos-proposals-sinks-v0.2.0.spkg  substreams.yaml
cosmos-proposals-sinks/src/: block_events.rs  blocks.rs  deposits.rs  governance_params.rs  messages.rs
cosmos-proposals-sinks/src/pb/: cosmos.gov.v1.rs
cosmos-proposals/src/: deposits.rs  governance_params.rs  lib.rs  sink.rs  transactions.rs  utils.rs
cosmos-proposals/src/pb/: cosmos.gov.v1beta1.rs  mod.rs
cosmos-proposals/src/proposals/: proposals.rs
cosmos_governance_parameters/: Cargo.toml  substreams.yaml
cosmos_governance_parameters/proto/: events.proto
cosmos_governance_parameters/src/: gov_params.rs  lib.rs  map_events.rs  pending_gov_params.rs  serde_structs.rs
cosmos_governance_parameters/src/pb/: cosmos.custom_events.rs  events.rs  mod.rs
cosmos_proposals/: Cargo.toml  Makefile  schema.graphql  substreams.yaml
cosmos_proposals/src/: deposits.rs  genesis_params.rs  governance_params.rs  lib.rs  messages.rs  sink.rs  transactions.rs  utils.rs
cosmos_proposals/src/pb/: cosmos.authz.v1beta1.rs  cosmos.base.v1beta1.rs  cosmos.distribution.v1beta1.rs  cosmos.upgrade.v1beta1.rs  ibc.core.client.v1.rs  mod.rs
cosmos_proposals/src/proposals/: client_update.rs  proposals.rs  software_upgrades.rs
doc/: limitations.md  proposal-status.md  proposal-types.md
proto/cosmos/: events.proto
proto/v1/: events.proto
src/: block_events.rs  blocks.rs  client_update.rs  community_pool_spends.rs  content.rs  deposits.rs  genesis_params.rs  gov_params_store.rs  index.rs  lib.rs  messages.rs  order_by.rs  other_proposals.rs  parameter_changes.rs  proposal_deposits.rs  proposal_votes.rs  proposals.rs  serde_genesis.rs  sink.rs  software_upgrades.rs  text.rs  transactions.rs  utils.rs  votes.rs
src/governance_parameters/: gov_params.rs  map_events.rs  mod.rs  pending_gov_params.rs
src/pb/: cosmos.distribution.v1beta1.rs  cosmos.gov.v1.rs  cosmos.gov.v1beta1.rs  cosmos.params.v1beta1.rs  custom_proto.rs  mod.rs
src/proposals/: client_update.rs  community_pool_spends.rs  mod.rs  other_proposals.rs  parameter_changes.rs  proposals.rs  software_upgrades.rs  text_proposal.rs
subgraphs/cosmoshub/: Makefile  subgraph.yaml  substreams.yaml
subgraphs/injective/: Makefile  subgraph.yaml  substreams.yaml
subgraphs/osmosis/: Makefile  subgraph.yaml  substreams.yaml
subgraphs/theta/: Makefile  subgraph.yaml  substreams.yaml
