[package]
name = "cosmos_proposals"
version = "0.0.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.6"
substreams-entity-change = "2.0"
substreams-cosmos = "0.2"
sha2 = "0.10.8"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
