[workspace]
members = ["cosmos_governance_parameters", "cosmos_proposals"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
substreams = "0.6"
substreams-entity-change = "2.0"
substreams-cosmos = "0.2"
sha2 = "0.10.8"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"
