[workspace]
members = [
    "cosmos-block-index",
    "cosmos-proposals-events",
    "cosmos-governance-parameters",
    "cosmos-proposals-sinks",
    "cosmos-proposals-protobuf",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
substreams = "0.6"
substreams-entity-change = "2.0"
substreams-cosmos = "0.2"
prost = "0.13"
prost-types = "0.13"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"
