[package]
name = "cosmos-block-index"
edition = { workspace = true }
version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams-cosmos = { workspace = true }
substreams = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
