[package]
name = "cosmos_governance_parameters"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmos-proposals-events = { path = "../cosmos-proposals-events" }
cosmos-proposals-protobuf = { path = "../cosmos-proposals-protobuf" }
substreams = { workspace = true }
substreams-cosmos = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# substreams-entity-change = { workspace = true }
# prost = { workspace = true }
# prost-types = { workspace = true }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

# sha2 = "0.10.8"
# base64 = "0.22.1"
