[package]
name = "cosmos_governance_parameters"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmos-proposals-events = { path = "../cosmos-proposals-events" }
cosmos-proposals-protobuf = { path = "../cosmos-proposals-protobuf" }
substreams = { workspace = true }
substreams-cosmos = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
