[package]
name = "cosmos-proposals-events"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmos-proposals = { path = "../cosmos-proposals" }
cosmos-proposals-protobuf = { path = "../cosmos-proposals-protobuf" }
substreams = { workspace = true }
substreams-cosmos = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
