[package]
name = "cosmos-proposals-protobuf"
edition = { workspace = true }
version = { workspace = true }
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
