[package]
name = "cosmos-proposals-sinks"
edition = { workspace = true }
version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-entity-change = { workspace = true }
substreams-cosmos = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
base64 = "0.22.1"
