[package]
name = "cosmos_governance_parameters"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams.workspace = true
substreams-entity-change.workspace = true
substreams-cosmos.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
cosmos_proposals = { path = "../cosmos_proposals" }
