[package]
name = "cosmos_proposals"
edition = { workspace = true }
version = { workspace = true }


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
substreams.workspace = true
substreams-entity-change.workspace = true
substreams-cosmos.workspace = true
sha2.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
